import { ContactSupport } from '@/screens/contact-support';

export default ContactSupport;
